fix(STN-254): get rid of box shadow on mobile

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_main-nav.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_main-nav.scss
@@ -98,6 +98,8 @@
       }
 
       @include grid-media-min('lg') {
+        box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.1) !important;
+
         .js & {
           font-weight: hb-theme-font-weight(semibold);
           font-size: inherit;
@@ -344,7 +346,6 @@
 
   &__menu-container {
     padding-left: hb-calculate-rems(20px);
-    box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.1);
     border-top: $hb-menu-light-border;
 
     &[aria-hidden="true"] {
